--- a/Figma-Task-1/style.css
+++ b/Figma-Task-1/style.css
@@ -134,10 +134,18 @@ padding-top: 37px;
 
 .main2{
     text-align: center;
+    margin-left: 300px;
+    
+
 }
 .trend-heading{
     font-size: 40px;
     font-family: 'Brasley';
+    font-weight: 600;
+font-size: 40px;
+line-height: 40px;
+text-align: center;
+
 }
 .new-arrival p {
     width: 131px;
@@ -220,6 +228,16 @@ color: #4F433F !important;
     margin-left: 0 !important;
 }
 @media only screen and (max-width: 600px) {
+    .nav-link{
+      margin-left: 150px;
+    }
+    .bella{
+        margin-left: 10px;
+    }
+    .section-bg{
+        height: 1000px;
+    }
+    
     
 .image3 {
     background: rgba(200, 172, 161, 0.26);
@@ -228,7 +246,8 @@ color: #4F433F !important;
     height: 143px;
     border-radius: 8px;
     display: flex;
-    margin-left: 30px;
+    margin-left: 20px;
+    margin-top: 300px;
 }
     .img1 {
         width: 24%;
@@ -281,6 +300,7 @@ color: #4F433F !important;
         margin-left: 30px;
     }
     .main-title{
+        position: absolute;
         margin-top: -170px;
         margin-left: 30px;
     }
@@ -309,67 +329,157 @@ color: #4F433F !important;
     
 }
 
-.card{
-    background: rgba(200, 172, 161, 0.2);
-border-radius: 8px;
-}
 
-.cards-wrapper {
+.first-shoes{
+    width: 80%;
+height: 196px;margin-top: 50px;margin-left: 15px;
+}
+.shoes-second{
+    width: 80%;
+height: 228px;
+
+                margin-top: 20px;
+                margin-left:45px;
+}
+.shoes-third{
+   
+                width: 80%;
+height: 195px;
+margin-top: 50px;
+margin-left: 12px;
+}
+.shoes-fourth{
+   
+                width: 80%;
+height: 212px;
+margin-top: 50px;
+margin-left: 15px;
+}
+.card-back{
+   height:339px;
+   background: rgba(200, 172, 161, 0.2);
+   border-radius: 8px;
+     width:100%;
+}
+.inner-card-div{
     display: flex;
-    justify-content: center;
-  }
-  .card img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .card {
-    margin: 0 0.5em;
-    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-    border: none;
-    border-radius: 0;
-  }
-  .carousel-inner {
-    padding: 1em;
-  }
-
-  .carousel-control-prev,
-.carousel-control-next {
-  background-color: yellow;
-  width: 5vh;
-  height: 5vh;
-  border-radius: 50%;
-  top: 50%;
-  transform: translateY(-50%);
+    background: #F4EEEC;
+box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.1);
+border-radius: 8px;
+width: 80%;
+height: 79.03px;
+margin-left: 20px;
 }
-@media (min-width: 768px) {
-    .card img {
-      height: 11em;
-    }
- }
+
+.price{
+    margin-top: 10px;
+    margin-left: 20px;
+    
+   
+    
+}
+.price p{
+    font-weight: 500;
+font-size: 16px;
+}
+.errow{
+        margin-left: 70px;
+        margin-top:30px
+}
+.left-Arrow img{
+    margin-top: 160px;
+    margin-left: -50px;
+}
+.right-Arrow img{
+    margin-top: 160px;
+    margin-left: 70px;   
+}
+.main-div{
+    width: 1000px;
+    border: none;
+   
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+   
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: none !important;
+    border-radius: 0.25rem;
+   
+}
 
 
- a {
-    text-decoration: none;
-    display: inline-block;
-    padding: 8px 16px;
+
+
+
+@media only screen and (max-width: 600px){
+    .info-1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin-left: 10px;
+      }
+      .heading{
+        margin-left: 40px;
+      }
+      .images{
+        margin-left: 50px;
+      }
+      
   }
-  
-  a:hover {
-    background-color: #ddd;
-    color: black;
+
+  .info1{
+    margin-left:95px;
+    background: rgba(200, 172, 161, 0.2);
+    border-radius: 8px;
+    width: 60px;
+height: 60px;
+    
   }
-  
-  .previous {
-    background-color: #f1f1f1;
-    color: black;
+  .info-1 > div {
+    background: #ffff;;
+    margin: 10px;
+    padding: 20px;
   }
-  
-  .next {
-    background-color: #04AA6D;
-    color: white;
+  h1{
+    display: flex;
+    font-family: 'Brasley';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 20px;
+    align-content: center;    
+    text-align: center;
+    padding-left:22px;
+    
+    color: #000000;
+    
   }
-  
-  .round {
-    border-radius: 50%;
-  }
+  p{
+    display: flex;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    padding-top: 10px;
+    padding-left:-4px;
+    color: #6B7280;
+  }  
+  .info-1{
+    display: flex;
+    background-color: #ffff;
+    margin-top:70px;
+    border-radius: 8px;
+    box-shadow: 10px 10px rgba(199, 185, 192, 0.3);;
+
+    margin-bottom:90px;
+
+
+}
