--- a/Figma-Task-1/style.css
+++ b/Figma-Task-1/style.css
@@ -99,6 +99,31 @@ padding-top: 37px;
     width: 26px;
     height: 26px
 }
+.trending-heading{
+    font-family: 'Brasley';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 40px;
+text-align: center;
+margin-left: 50px;
+color: #2F2649;
+
+}
+.trending-paragraph{
+    font-family: 'Brasley';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+margin-left: 20px;
+line-height: 20px;
+/* or 125% */
+
+text-align: center;
+
+color: #000000;
+
+}
 
 .main-img {
     width: 530px;
@@ -135,17 +160,6 @@ padding-top: 37px;
 .main2{
     text-align: center;
     margin-left: 300px;
-    
-
-}
-.trend-heading{
-    font-size: 40px;
-    font-family: 'Brasley';
-    font-weight: 600;
-font-size: 40px;
-line-height: 40px;
-text-align: center;
-
 }
 .new-arrival p {
     width: 131px;
@@ -182,7 +196,7 @@ color: #4F433F !important;
 .image3 {
     background: rgba(200, 172, 161, 0.26);
     border-radius: 8px;
-    width: 60%;
+    width: 70%;
     height: 133px;
     border-radius: 8px;
     display: flex;
@@ -214,12 +228,17 @@ color: #4F433F !important;
     margin-top: 20px;
     margin-left: 20px
 }
-.img4{
-    width: 6%;
-    height:50px;
-    margin-top: 50px;
-    margin-left: 20px
+.img4-1{
+   margin-bottom:10px ;
 }
+.img4-div{
+ margin-left: 380px;
+ margin-top: 40px;
+ width: 100%;
+   
+}
+
+  
 .container-fluid{
     width: 100%;
     padding-right: var(--bs-gutter-x, 0) !important;
@@ -228,6 +247,13 @@ color: #4F433F !important;
     margin-left: 0 !important;
 }
 @media only screen and (max-width: 600px) {
+    .trending-heading{
+        margin-left: 15px;
+        font-size: 30px;
+    }
+    .trending-paragraph{
+        margin-left: 15px;
+    }
     .nav-link{
       margin-left: 150px;
     }
@@ -275,12 +301,7 @@ color: #4F433F !important;
         margin-top: 20px;
         margin-left: 20px;
     }
-    .img4{
-        width: 5%;
-        height: 60px;
-        margin-top: 40px;
-        margin-left: 20px;
-    }
+    
     .new-arrival p{
         margin-left:30px
     }
@@ -314,6 +335,7 @@ color: #4F433F !important;
         line-height: 60px;
         margin-top: 237px;
         margin-left: 0px;
+        text-align: start;
     
         /* or 104% */
     
@@ -412,7 +434,52 @@ font-size: 16px;
     border-radius: 0.25rem;
    
 }
+.carousel-control-prev {
+    left: auto !important;
+}
+.pictures{
+    width: 100%;
+}
 
+.carousel-control-next{
+
+    position: absolute !important;
+    top: 50px !important;
+    bottom: 0;
+   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px !important;
+    padding: 0;
+    /* color: #fff; */
+    text-align: center;
+    background: 0 0;
+    border: 0;
+    opacity: 1 !important;
+  
+
+}
+.carousel-control-next {
+    right: auto !important;
+}
+ .carousel-control-prev {
+    position: none !important;
+    top: 80px !important;
+    bottom: 0;
+   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px !important;
+    padding: 0;
+    /* color: #fff; */
+    text-align: center;
+    background: 0 0;
+    border: 0;
+    opacity: 1 !important;
+  
+}
 
 
 
@@ -446,7 +513,7 @@ height: 60px;
     margin: 10px;
     padding: 20px;
   }
-  h1{
+  .info-1>h1{
     display: flex;
     font-family: 'Brasley';
     font-style: normal;
@@ -460,7 +527,7 @@ height: 60px;
     color: #000000;
     
   }
-  p{
+  .info-1>p{
     display: flex;
     font-family: 'Poppins';
     font-style: normal;
@@ -480,6 +547,387 @@ height: 60px;
     box-shadow: 10px 10px rgba(199, 185, 192, 0.3);;
 
     margin-bottom:90px;
+}
+
+.section4{
+    margin-left: 60px;
+}
 
 
+.section4-main-div{
+    background: rgba(200, 172, 161, 0.2);
+    border-radius: 8px;
+    margin-top: 1000px;
+    margin-left: -30px;
+}
+.section4-left-div{
+display: flex;
+} 
+.ractangle{
+    width: 200px;
+height: 182px;
+margin-top: 50px;
+margin-left: 60px;
+
+}
+.inner-title-section4-left{
+
+   margin-top: 100px;
+   margin-left: -120px;
+font-family: 'sans-sarif';
+
+font-weight: 700;
+font-size: 50px;
+line-height: 50px;
+color: #2F2649;
+}
+.nike-shoes{
+    width:100%;
+  
+height: 349px;
+margin-left: 116px;
+
+}
+.section4-right-div-top{
+    background: rgba(200, 172, 161, 0.2);
+    background: rgba(200, 172, 161, 0.2);
+    border-radius: 8px;
+    display: flex;
+    margin-left: 30px;
+    height: 50%;
+    
+  
+    
+
+}
+.section4-right-div-bottom{
+    background: rgba(200, 172, 161, 0.2);
+    background: rgba(200, 172, 161, 0.2);
+    border-radius: 8px;
+    display: flex;
+    margin-left: 30px;
+    margin-top: 30px;
+    height: 45%;
+}
+.bigsale{
+    font-family: 'Brasley';
+font-style: normal;
+font-weight: 400;
+font-size: 40px;
+line-height: 50px;
+margin-top: 50px;
+margin-left: 40px;
+/* identical to box height, or 125% */
+
+text-align: center;
+
+color: #2F2649;
+
+}
+.newitem{
+    font-family: 'Brasley';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 50px;
+/* identical to box height, or 109% */
+
+text-align: center;
+
+color: #7287BB;
+margin-top: 15px;
+margin-left: 40px;
+}
+.bigsale1{
+    font-family: 'Brasley';
+font-style: normal;
+font-weight: 400;
+font-size: 40px;
+line-height: 50px;
+margin-top: 50px;
+margin-left: 40px;
+/* identical to box height, or 125% */
+
+text-align: center;
+
+color: #2F2649;
+
+}
+.newitem1{
+    font-family: 'Brasley';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 50px;
+/* identical to box height, or 109% */
+
+text-align: center;
+
+color: #7287BB;
+margin-top: 15px;
+margin-left: 40px;
+}
+
+.bag img{
+    margin-top: -71px;
+    margin-left: -10px;
+}
+.shirt img{
+    margin-top: 43px;
+    margin-left:15px;
+}
+@media only screen and (max-width: 600px){
+    .section4{
+        margin-left: 0px;
+    }
+    
+    .nike-shoes{
+        width: 100px;
+    height: 349px;
+    margin-top: 30px;
+    margin-left: 50px;
+    }
+    .nike-shoes img{
+        width: 200%;
+    }
+    .section4-right-div-top{
+        margin-left: -50px;
+
+    }
+    .section4-main-div{
+        height:500px;
+        background: rgba(200, 172, 161, 0.2);
+        border-radius: 8px;
+        margin-top: 0;
+        margin-left: 5px;
+        text-align: center;
+    }
+    .bag img{
+        margin-left: 50px;
+        margin-top: 100px;
+        width: 60%;
+    }
+    .shirt img{
+        margin-left: 50px;
+        margin-top: 100px;
+        width: 70%;
+    }
+    .bigsale1{
+        margin-left: -20px;
+
+    }
+    .newitem1{
+        margin-left: -20px;
+    }
+    .section4-right-div-top{
+        background: rgba(200, 172, 161, 0.2);
+        background: rgba(200, 172, 161, 0.2);
+        border-radius: 8px;
+        display: flex;
+        margin-top: 30px;
+        margin-left: 5px;
+        height: 50%;
+        
+      
+        
+    
+    }
+    .section4-right-div-bottom{
+        background: rgba(200, 172, 161, 0.2);
+        background: rgba(200, 172, 161, 0.2);
+        border-radius: 8px;
+        display: flex;
+        margin-left: 5px;
+        height: 50%;
+        
+      
+        
+    
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.part{
+    width: 100%;
+height: 289px;
+
+background: #FFFFFF;
+/* opacity: 0.6; */
+box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+border-radius: 20px;
+}
+.part-top{
+    display:flex;
+   
+    margin-left: 40px;
+
+}
+.girl-image{
+    margin-top: 56px;
+    
+}
+.part-title{
+    margin-top: 50px;
+    margin-left: 20px;
+}
+.light{
+    margin-top:-20px
+}
+.bold{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+
+font-size: 20px;
+line-height: 16px;
+/* identical to box height */
+
+text-align: center;
+
+color: #000000;
+}
+.sign{
+    margin-left: 96px;
+    margin-top: 76px;
+}
+.para{
+    margin-top: 33px;
+    width: 253px;
+height: 96px;
+}
+.para p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+margin-left: 40px;
+color: #6B7280;
+text-align: start;
+
+}
+.testmonial{
+    width: 262px;
+height: 60px;
+margin-left: 550px;
+margin-top: 80px;
+margin-bottom: 50px;
+}
+.testmonial p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 60px;
+/* identical to box height */
+
+display: flex;
+align-items: center;
+
+color: #000000;
+}
+
+
+@media only screen and (max-width: 600px){
+    .testmonial{
+        margin-left: 90px;
+    }
+    .part{
+        margin-bottom: 20px;
+    }
+}
+
+
+
+
+footer{
+    background: #6D8ABB;
+    display: flex;
+    margin-top: 100px;
+}
+.name{
+    
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height */
+
+letter-spacing: -0.204545px;
+
+color: #FFFFFF;
+}
+.first{
+    margin-top: 136;
+    margin-left: 123px;
+}
+.address{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 22px;
+letter-spacing: -0.204545px;
+
+color: #F3F7FA;
+
+mix-blend-mode: normal;
+}
+.second{
+    margin-top:136px
+}
+.nav-link2{
+    color: white;
+    width: 30%;
+}
+.nav-item2{
+    width: 80px;
+}
+.links{
+    margin-top: 135px;
+    display: flex;
+    margin-left: 90px;
+}
+.facebook{
+    margin-right: 60px;
+}
+.instagram{
+    margin-right: 60px;
+}
+@media only screen and (max-width: 600px){
+    .first{
+        margin-top: 10px;
+    }
+   
+    .navbar-toggler-icon {
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        vertical-align: middle;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+        margin-top: -230 !important; 
+    }
+    .links{
+        margin-top: -150px;
+    }
+    .linkss{
+        margin-top: -170px;
+    }
+    footer{
+        height:50%;
+    }
+   
 }
