--- a/figma-laravel/public/crypto-figma/style.css
+++ b/figma-laravel/public/crypto-figma/style.css
@@ -4,23 +4,16 @@
 }
 
 /* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%Header%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
+@font-face {
+    font-family: 'IvyMode';
+    src: url('../crypto-figma/font1/IvyMode-Bold.ttf');
+}
 
 header{
 width:100%;
 height: 905px;
 background-color: #08001A;
 background-image: url("/crypto-figma/images/union.png");
-}
-@font-face {
-    font-family: 'IvyMode';
-    src: url('/figma-laravel/public/font1/IvyMode-Light.eot');
-    src: url('/figma-laravel/public/Font1/IvyMode-Light.eot?#iefix') format('embedded-opentype'),
-         url('/figma-laravel/public/Font1/IvyMode-Light.woff') format('woff'),
-         url('/figma-laravel/public/Font1/IvyMode-Light.ttf') format('truetype'),
-         url('/figma-laravel/public/Font1/IvyMode=Light.svg#SansationLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
 }
 
 .bg-img{
@@ -32,16 +25,16 @@ height: 832px;
 }
 .main-heading{
     width: 966px;
-height: auto;
+height: 216px;
 text-align: center;
 margin-top: -571px;
 margin-left: 190px;
 }
 .main-heading p{
-    font-family: 'IvyMode';
+    font-family: 'IvyMode' ;
 font-style: normal;
 font-weight: 700;
-font-size: 72px;
+font-size: 66px;
 line-height: 150%;
 color: #F7F7F7
 }
@@ -67,6 +60,9 @@ margin-left: 164px;
     width: 246px;
 height: 242px;
 border-radius: 10px;
+margin-top: -40px;
+
+
 }
 
 .first{
@@ -93,7 +89,7 @@ margin-top: 25px;
 .third-image{
     width: 193px;
 height: 193px;
-margin-top: 40px;
+margin-top: 30px;
 margin-left:10px;
 }
 .fourth{
@@ -102,7 +98,7 @@ margin-left:10px;
 .fourth-image{
     width: 150px;
 height: 194px;
-margin-top: 40px;
+margin-top: 30px;
 margin-left: 40px;
 }
 .fifth{
@@ -111,7 +107,7 @@ margin-left: 40px;
 .fifth-image{
     width: 180px;
 height: 180px;
-margin-top: 60px;
+margin-top: 30px;
 margin-left: 40px;
 }
 .account {
@@ -120,7 +116,8 @@ font-style: normal;
 font-weight: 700;
 font-size: 16px;
 line-height: 150%;
-margin-top: 20px;
+height: 125px;
+margin-top: -32px;
 padding-top: 20px;
     padding-left: 10px;
 /* identical to box height, or 33px */
@@ -133,9 +130,9 @@ color: #2F2D2D;
     font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
-font-size: 10px;
+font-size: 16px;
 line-height: 150%;
-padding-top: 10px;
+padding-top: 4px;
 /* or 27px */
 
 
@@ -145,26 +142,59 @@ color: #6B7280;
 .overlay{
     opacity: 0;
     background-color: white;
-    margin-top: -16px;
+    margin-top: 56px;
 
 }
-.cards:hover{
+.cards:hover {
 
-    height: 342px;
+    height: 460px;
+    width: 348px;
     border: solid white 10px;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.5s ease;
     border-radius: 15px;
-    transform: scale(1.3);
-    margin-top: 10px;
+    margin-top: -75px;
+
+
+
+}
+.cards:hover .overlay{
+    opacity:1;
+    transition: 0.5s ease;
 
 
 }
 
 
-.overlay:hover{
-    opacity:1;
-    transition: 0.5s ease;
+.cards:hover .first-image {
+    width:177px;
+    height: 266;
+    margin-left: 40px;
+
+}
+.cards:hover .second-image {
+    width:177px;
+    height: 266;
+    margin-left: 60px;
+
+}
+.cards:hover .third-image {
+    width:177px;
+    height: 266;
+    margin-left: 60px;
+
+}
+.cards:hover .fourth-image {
+    width:177px;
+    height: 266;
+    margin-left: 60px;
+
+}
+.cards:hover .fifth-image {
+    width:177px;
+    height: 266;
+    margin-left: 60px;
+
 }
 
 
@@ -647,6 +677,7 @@ font-style: normal;
 font-weight: 400;
 font-size: 15px;
 line-height: 22px;
+margin-top: 15px;
 /* identical to box height */
 
 letter-spacing: -0.204545px;
@@ -657,8 +688,28 @@ color: #515151;
 {
     margin-left:-400px;
 }
+.get-start{
+    background: #8F60FF;
+border-radius: 4px;
+width: 175px;
+height: 50px;
+margin-left: -1000px;
+margin-top: 230px;
+padding-left: 45px;
+padding-top: 10px;
+}
+.get-start p{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 26px;
+/* identical to box height */
 
+letter-spacing: -0.231818px;
 
+color: #FFFFFF;
+}
 
 
 
@@ -719,6 +770,9 @@ transform: scale(1.3);
     margin-left: 10px;
     width: 454px;
 }
+.para p{
+    margin-left: 31px;
+}
 .dotline1,.dotline2,.dotline3{
  display: none;
 }
@@ -726,7 +780,7 @@ transform: scale(1.3);
     margin-left: 180px;
 }
 .para2{
-    margin-left: 100px;
+    margin-left: 113px;
 }
 .step {
     margin-left: 90px;
@@ -758,8 +812,9 @@ transform: scale(1.3);
 
     width: 339px;
     height: 140px;
-    margin-left: 63px;
+    margin-left: 83px;
     font-size: 30px;
+
 
 }
 .card5{
